Displayed publication name instead of id in separate pages for each publication

--- a/templates/views/eresources/publication.jade
+++ b/templates/views/eresources/publication.jade
@@ -39,7 +39,7 @@ block content
             if publication.publicationLine
               p
                 span.pub-field Publication Line:&nbsp;
-                span.pub-value #{publication.publicationLine}
+                span.pub-value #{publication.publicationLine.name}
 
             if publication.technicalEditor
               p
