Added admin check for analytics view

--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -205,14 +205,15 @@
                       i.fa.fa-thumbs-up &nbsp#{announcement.reactions[1].count}&nbsp
                       i.fa.fa-comment &nbsp#{announcement.reactions[0].count}&nbsp
                     - i += 1
-            
-  #public-analytics.row
-    .section.col-md-12
-      .section-content.text-center
-        br
-        h2.text-center Analytics
-        h4.text-center User activities are measured in order to optimze and enrich the experience of a social community.
-        a(href="community/analytics")
-          button.btn.btn-lg.btn-warning Learn More
-        br
-        br
+  if user && user.canAccessKeystone
+    #public-analytics.row
+      .section.col-md-12
+        .section-content.text-center
+          br
+          h2.text-center Analytics
+          h4.text-center User activities are measured in order to optimze and enrich the experience of a social community.
+          a(href="community/analytics")
+            button.btn.btn-lg.btn-warning Learn More
+          br
+          br
+  br
