--- a/templates/views/community/community-analytics.jade
+++ b/templates/views/community/community-analytics.jade
@@ -3,7 +3,7 @@ extends ../../layouts/community
 block content
   #community-analytics
     .container
-      <iframe src="http://128.199.221.54/piwik/index.php?module=Widgetize&action=iframe&moduleToWidgetize=Dashboard&actionToWidgetize=index&idSite=5&period=week&date=yesterday" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="1600px"></iframe>
+      <iframe src="http://128.199.221.54/piwik/index.php?module=Login&action=logme&login=#{data.params.username}&password=#{data.params.password}&module=Widgetize&action=iframe&moduleToWidgetize=Dashboard&actionToWidgetize=index&idSite=5&period=week&date=yesterday" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="1800px"></iframe>
 
 block js
   script(src="/bower_components/moment/moment.js")
