Added publications' settings in the CMS

--- a/templates/views/eresources/publications-grid.jade
+++ b/templates/views/eresources/publications-grid.jade
@@ -7,7 +7,7 @@ block publications
         h4(style='text-align:center') #{pubLine.name}
       
       each publication in data.publications.results
-        .col-sm-6.col-md-3(style='padding-left:0')
+        .col-sm-6.col-md-4.col-lg-3(style='padding-left:0')
           .thumbnail(style='padding:10px')
             .publication-col-grid
               | #{publication.index}
