Removed version display

--- a/templates/layouts/elearning-user.jade
+++ b/templates/layouts/elearning-user.jade
@@ -68,8 +68,8 @@ html
                 li: a(href=link.href, class=section == link.key ? 'active' :"not-active")= link.label
               li: a(class="not-active" onclick="toggleButton()")
                 i.fa.fa-search#toggleIcon
-              li: a(href='#', class="not-active")
-                button#versionbutton ALPHA
+              //- li: a(href='#', class="not-active")
+              //-   button#versionbutton ALPHA
 
       //- SUB NAVBAR
       div#elearning-nav.navbar-fixed-top
