Changed Exhibit to Fiesta

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -53,7 +53,7 @@ block content
 					!= settings.fiestaDescription
 				
 		.row
-			each exhibit in exhibits
+			each exhibit in fiesta
 				.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
 					a.fh5co-project-item(href=exhibit.link, style='background-image: url('+exhibit.coverImage.secure_url+');', target='_blank')
 						//- img.img-responsive.sr-only(src=exhibit.coverImage.secure_url)
