Configure piwik scripts to the layouts

--- a/templates/layouts/eresources.jade
+++ b/templates/layouts/eresources.jade
@@ -21,6 +21,18 @@ html
 
     link(rel="stylesheet" type="text/css" href="/styles/technology.css")
     script(src='https://use.fontawesome.com/b2a273c68b.js')
+    
+    script(type='text/javascript').
+      var _paq = _paq || [];
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+      var u="//128.199.221.54/piwik/";
+      _paq.push(['setTrackerUrl', u+'piwik.php']);
+      _paq.push(['setSiteId', '3']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
 
     //- This file provides the default styling for the KeystoneJS Content Editor
     if user && user.canAccessKeystone
