Updated community host

--- a/templates/views/community/community.jade
+++ b/templates/views/community/community.jade
@@ -10,5 +10,6 @@ block js
   script(src='/bower_components/theia-sticky-sidebar/dist/ResizeSensor.js')
   script(src='/bower_components/theia-sticky-sidebar/dist/theia-sticky-sidebar.js')
   script(src='/bower_components/masonry/dist/masonry.pkgd.min.js')
+  script(src='/bower_components/imagesloaded/imagesloaded.pkgd.js')
   script(src='/js/dropdown.js')
   script(src='/js/community-public.js')
