--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -33,12 +33,8 @@
             each blog in blogPosts
               .blog.row
                 .blog-avatar
-                  if blog.postedBy.photo
-                    a(href="#").author-image
-                      //- Include image here
-                      img(src='images/community/director-news.jpg').img-responsive
-                  else
-                    .glyphicon.glyphicon-user
+                  a(href="#").author-image
+                    img(src='#' height="78px" width="78px" data-auth=blog.postedBy._id).img-responsive.avatar-img
                 .blog-content
                   .content-header
                     h4
@@ -95,7 +91,7 @@
                       .photo.col-md-6.pull-left
                         a(href=host + '/groups/' + group.handle)
                           if group.photo
-                            img(src=group.photo.secure_url).img-responsive
+                            img(src=host+'/'+group.photo.filename).img-responsive
                           else
                             img(src="http://placehold.it/120x120")
                         case group.classification.industry
@@ -143,9 +139,9 @@
           span.badge.active(style="cursor: default;") #news
           if tags && tags.length
             each tag in tags
-             span.badge #{'#'+tag.name}
+             span.badge.tag #{'#'+tag.name}
         .board
-          if discussions && discussions.length
+          if announcements && announcements.length
             .grid
               .grid-sizer.col-sm-6.col-md-3
               - var i = 0;
@@ -160,15 +156,18 @@
                     - color = "#614126"
                   default
                     - color = "#333"
-                .announcement.grid-item.col-sm-6.col-md-3(data-toggle="modal" data-target="#modal"+i)
+                .announcement.grid-item.col-sm-6.col-md-3(data-toggle="modal" data-target="#modal"+i data-tags=announcement.hashtags)
                   .grid-item-content(style="background-color:"+color)
                     .header
-                      img(src="http://placehold.it/40x40").img-circle.pull-left
+                      img(src="#" height="40px" width="40px" data-auth=announcement.postedBy._id).img-circle.pull-left.avatar-img
                       .author
                         span #{announcement.postedBy.name}
                         .time.text-small #{announcement.datePosted}
                     .title
                       span #{announcement.newsTitle}
+                    if announcement.files.length
+                      .image
+                        img(src=host+'/'+announcement.files[0].filename style="margin: 0 auto").img-responsive
                     .details #{announcement.newsBody}
                     .modal.fade(id="modal"+i tabindex="-1" data-backdrop="static" data-keyboard="false")
                       .modal-dialog.modal-lg
@@ -186,11 +185,14 @@
                                 .content
                                   .post(style="background-color:"+color)
                                     .modal-title.text-center #{announcement.newsTitle}
+                                    if announcement.files.length
+                                      .image.center-block
+                                        img(src=host+'/'+announcement.files[0].filename style="margin: 0 auto").img-responsive
                                     .modal-body #{announcement.newsBody}
                             .col-sm-3
                               .modal-section
                                 .header
-                                  img(src="http://placehold.it/40x40").img-circle.pull-left
+                                  img(src="#").img-circle.pull-left
                                   .author
                                     span #{announcement.postedBy.name}
                                     .time.text-small #{announcement.datePosted}
