--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -192,7 +192,7 @@
                             .col-sm-3
                               .modal-section
                                 .header
-                                  img(src="#").img-circle.pull-left
+                                  img(src="#" height="40px" width="40px" data-auth=announcement.postedBy._id).img-circle.pull-left.avatar-img
                                   .author
                                     span #{announcement.postedBy.name}
                                     .time.text-small #{announcement.datePosted}
