Added sorting for announcement board

--- a/templates/views/community/community.jade
+++ b/templates/views/community/community.jade
@@ -7,6 +7,7 @@ block content
   include community-public.jade
                   
 block js
+  script(src="/bower_components/moment/moment.js")
   script(src='/bower_components/theia-sticky-sidebar/dist/ResizeSensor.js')
   script(src='/bower_components/theia-sticky-sidebar/dist/theia-sticky-sidebar.js')
   script(src='/bower_components/masonry/dist/masonry.pkgd.min.js')
