--- a/public/styles/community/public-content.less
+++ b/public/styles/community/public-content.less
@@ -288,6 +288,27 @@
       }
     }
 
+    .sort-functions {
+      color: black;
+
+      a {
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 8px;
+        border: 1px solid white;
+
+        &:hover, &.active {
+          color: black;
+          cursor: pointer;
+          border: 1px solid #aea2a2;
+          -webkit-box-shadow:0px 0px 5px 1px #aea2a2 inset;
+          -moz-box-shadow:0px 0px 5px 1px #aea2a2 inset;
+          box-shadow:0px 0px 5px 1px #aea2a2 inset;
+          transition: none;
+        }
+      }
+    }
+
     .announcement {
       padding: 5px 7.5px;
       color: white;
