--- a/templates/views/elearning/content/courseList.jade
+++ b/templates/views/elearning/content/courseList.jade
@@ -2,10 +2,10 @@ extends ../../../layouts/elearning
 
 mixin allcourses-grid(courses)
   .row
-    .col-md-8.col-xs-10
+    .col-md-6.col-xs-6
       h3.text-left All Courses
-    .col-md-2.col-xs-2.pull-right
-      +view-generic()
+    .col-md-6.col-xs-6
+      +sort-view())
   .row.equal-height
     if courses.length
       each course in courses
