--- a/templates/views/elearning/content/courseOutline.jade
+++ b/templates/views/elearning/content/courseOutline.jade
@@ -30,10 +30,10 @@ block content
     .panel.panel-default
       .panel-body
         .row
-          .col-md-8.col-xs-10
+          .col-md-6.col-xs-6
             h3.text-left All Lessons in #{currentCourse.title}
-          .col-md-2.col-xs-2.pull-right
-            +view-generic()
+          .col-md-6.col-xs-6
+            +sort-view()
         .row
           if currentCourse.thumbnail.exists
             .col-md-8
