--- a/templates/views/elearning/content/popular.jade
+++ b/templates/views/elearning/content/popular.jade
@@ -6,12 +6,12 @@ block js
 
 mixin popularLO-grid(learningObjects)
   .row
-    .col-md-8.col-xs-7
+    .col-xs-6.col-md-6
       h3.text-left Popular Lessons this #{duration} (#{paginatePopularLO.total})
-    .col-md-2.col-xs-3
+    .col-md-6.col-md-6
+      +duration-sort-view()
+    //- .col-xs-3.col-md-3
       +duration-popular()
-    .col-md-2.col-xs-2.pull-right
-      +view-popular()
   .row.equal-height
     if learningObjects.length
       each learningObject in learningObjects
@@ -27,10 +27,10 @@ mixin popularLO-list(learningObjects)
   .row
     .col-md-8.col-xs-7
       h3.text-left Popular Lessons this #{duration} (#{paginatePopularLO.total})
+    .col-md-6.col-md-6
+      +duration-sort-view()
     .col-md-2.col-xs-3
       +duration-popular()
-    .col-md-2.col-xs-2.pull-right
-      +view-popular()
   .row
     if learningObjects.length
       .col-md-9
