--- a/templates/views/elearning/content/recommended.jade
+++ b/templates/views/elearning/content/recommended.jade
@@ -2,10 +2,15 @@ extends ../../../layouts/elearning
 
 mixin recommendedLO-grid(learningObjects)
   .row
-    .col-md-8.col-xs-10
+    .col-md-6.col-xs-6
       h3.text-left Recommended Lessons
-    .col-md-2.col-xs-2.pull-right
-      +view-generic()
+    .col-md-6.col-xs-6
+      +sort-view()
+      //- +view-generic()
+    //- .col-md-2.col-xs-2.pull-right
+      +sort-options()
+    //- .col-md-2.col-xs-2.pull-right
+      +filter-options()
 
   .row.equal-height
     if learningObjects.length
@@ -17,11 +22,10 @@ mixin recommendedLO-grid(learningObjects)
 
 mixin recommendedLO-list(learningObjects)
   .row
-    .col-md-8.col-xs-10
+    .col-md-6.col-xs-6
       h3.text-left Recommended Lessons
-    .col-md-2.col-xs-2.pull-right
-      +view-generic()
-
+    .col-md-6.col-xs-6
+      +sort-view()
   .row
     if learningObjects.length
       .col-md-9
