--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -488,3 +488,39 @@ small > .block-with-text:after {
   background: white;
 }
 
+@font-size: 16px;
+@line-height: 1.5;
+@lines-to-show: 3;
+/*
+
+font-size: 16px;
+  line-height: 26px;
+*/
+
+p.line-clamp {
+  display: block; /* Fallback for non-webkit */
+  display: -webkit-box;
+  max-width: 100%;
+  height: @font-size*@line-height*@lines-to-show; /* Fallback for non-webkit */
+  margin: 0 auto;
+  font-size: @font-size;
+  line-height: @line-height;
+  -webkit-line-clamp: @lines-to-show;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+small > .line-clamp {
+  display: block; /* Fallback for non-webkit */
+  display: -webkit-box;
+  max-width: 100%;
+  height: @font-size*@line-height*@lines-to-show; /* Fallback for non-webkit */
+  margin: 0 auto;
+  font-size: @font-size;
+  line-height: @line-height;
+  -webkit-line-clamp: @lines-to-show;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
