--- a/templates/views/admin/Analytics.jade
+++ b/templates/views/admin/Analytics.jade
@@ -1,7 +1,16 @@
-extends ../../layouts/default
- 
-body.cm-no-transition.cm-2-navbar
-  #cm-menu
+doctype html
+html(lang='en')
+  head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1')
+    link(rel='stylesheet', type='text/css', href='assets/css/bootstrap-clearmin.min.css')
+    link(rel='stylesheet', type='text/css', href='assets/css/roboto.css')
+    link(rel='stylesheet', type='text/css', href='assets/css/material-design.css')
+    link(rel='stylesheet', type='text/css', href='assets/css/small-n-flat.css')
+    link(rel='stylesheet', type='text/css', href='assets/css/font-awesome.min.css')
+    title  
+  body.cm-no-transition.cm-2-navbar
+    #cm-menu
       nav.cm-navbar.cm-navbar-primary
         .cm-flex
         .btn.btn-primary.md-menu-white(data-toggle='cm-menu')
@@ -80,3 +89,9 @@ body.cm-no-transition.cm-2-navbar
     footer.cm-footer
       span.pull-left Connected as USERNAME
       span.pull-right © PAOMEDIA SARL
+    script(src='assets/js/lib/jquery-2.1.3.min.js')
+    script(src='assets/js/jquery.mousewheel.min.js')
+    script(src='assets/js/jquery.cookie.min.js')
+    script(src='assets/js/fastclick.min.js')
+    script(src='assets/js/bootstrap.min.js')
+    script(src='assets/js/clearmin.min.js')
