edited working dashboard

--- a/templates/views/admin/analytics.jade
+++ b/templates/views/admin/analytics.jade
@@ -1,3 +1,17 @@
-extends index
+extends ../../layouts/admin-default
 
 block content
+
+    .container-fluid
+        .row    
+            .col-sm-5.col-md-3
+                p
+            .col
+                ol.breadcrumb
+                    li.active Community Views
+                    li
+                        a(href='#') Discussion Views
+                    li 
+                        a(href='#') Group Views
+                    li 
+                        a(href='#') Report Views
